Implemented weather system

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 color-eyre = "0.6.3"
 crossterm = "0.28.1"
 ratatui = "0.29.0"
+rand = "0.9.0"
+strum = "0.27.0"
+strum_macros = "0.27.0"
