--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ ratatui = "0.29.0"
 rand = "0.9.0"
 strum = "0.27.0"
 strum_macros = "0.27.0"
+serde = { version = "1.0.217", features = ["derive"]}
+serde_json = "1.0.138"
