--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ strum = "0.27.0"
 strum_macros = "0.27.0"
 serde = { version = "1.0.217", features = ["derive"]}
 serde_json = "1.0.138"
+petgraph = "0.7.1"
