--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ strum_macros = "0.27.0"
 serde = { version = "1.0.217", features = ["derive"]}
 serde_json = "1.0.138"
 petgraph = "0.7.1"
+log = "0.4.26"
+env_logger = "0.11.6"
